<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityInfo">

    <ImageView
        android:id="@+id/imageWTC"
        android:layout_width="168dp"
        android:layout_height="241dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/owtc" />

    <TextView
        android:id="@+id/name"
        android:layout_width="198dp"
        android:layout_height="75dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="One World Trade Center"
        android:textSize="25sp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageWTC"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressOWT"
        android:layout_width="198dp"
        android:layout_height="43dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/OneWorldAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageWTC"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/hooOWT"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="14sp"
        android:text="@string/OWTimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressOWT" />

    <TextView
        android:id="@+id/phoneOWT"
        android:layout_width="179dp"
        android:layout_height="29dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="20dp"
        android:text="@string/OWCNumber"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageWTC"
        app:layout_constraintTop_toBottomOf="@+id/hooOWT" />

    <TextView
        android:id="@+id/infoOWT"
        android:layout_width="388dp"
        android:layout_height="199dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/OneWorld"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageWTC" />

    <TextView
        android:id="@+id/OTCadmission"
        android:layout_width="190dp"
        android:layout_height="138dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/OWCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoOWT" />

    <TextView
        android:id="@+id/transitOWT"
        android:layout_width="184dp"
        android:layout_height="84dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Transit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/OTCadmission"
        app:layout_constraintTop_toBottomOf="@+id/infoOWT" />

</android.support.constraint.ConstraintLayout>